Fix spacing issues in multi input component

--- a/develop/components/MultiInputUI/style.scss
+++ b/develop/components/MultiInputUI/style.scss
@@ -2,26 +2,27 @@
 	overflow: hidden;
 
 	.sm-multi-input-list {
-		width: 100%;
 		max-height: 100px;
 		overflow-x: hidden;
 		overflow-y: auto;
 
 		.sm-multi-input-item {
 			display: flex;
-			justify-content: center;
+			justify-content: space-between;
 			align-items: center;
-			margin: 4px 0;
-			padding: 5px;
+			margin: 0.3rem 0;
+			padding: 5px 0 5px 0.5rem;
 			border-radius: 4px;
 			background-color: #eee;
 
-			.fas {
-				margin: 0 0.5rem;
+			span,
+			button {
+				margin-right: 0.5rem;
 			}
 
 			input {
-				flex: 1;
+				flex-grow: 1;
+				margin-right: 0.5rem;
 			}
 		}
 	}
